tests/NormalTests/paczka1/fuzzy1/45411004.err
Error in line 4: cWy7pRjk0HA A208 58,5
Error in line 8: cWy7pRjk0HA A832 -2,1
Error in line 22: YcctJSg A208 62,5
Error in line 21: cWy7pRjk0HA A832 1,8
Error in line 23: YcctJSg S255 46,9
Error in line 30: Rb6 S397 75,6
